fix text alignment

--- a/css/wave-catchers.css
+++ b/css/wave-catchers.css
@@ -73,7 +73,7 @@ h1 {
 
 p {
 	font-family: "Courier New";
-	text-align: justify;
+	text-align: left;
 	font-weight: bold;
 	font-size: 1.4vw !important;
 	line-height: 1.7vw !important;
